[package]
name = "native_call"
version = "0.1.0"
authors = ["高铨康 <hzgaoquankang@corp.netease.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "thread_count"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
num_cpus = "1.4.0"